# zero2prod

./: .gitignore  Cargo.toml  Dockerfile  README.md  spec.yaml  sqlx-data.json
.cargo/: config.toml
.github/workflows/: general.yml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20210923191100_create_subscriptions_table.sql  20221214182517_make_subscription_status_column_not_null.sql  20221214183850_create_subscription_tokens_table.sql  20230503163853_seed_user.sql  20230725184339_create_idempotency_table.sql  20230731180520_create_newsletter_delivery_queue.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/authentication/: middleware.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: mod.rs  persistence.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs
src/routes/admin/newsletters/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: mod.rs
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  helpers.rs  login.rs  main.rs  newsletter.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
