[package]
authors = ["kmn"]
edition = "2018"
name = "zero2prod"
version = "0.1.0"
[[bin]]
name = "zero2prod"
path = "src/main.rs"

[dependencies]
actix-http = "=3.0.0-beta.10"
actix-web = "=4.0.0-beta.9"
config = "0.11.0"
tracing-actix-web = "=0.4.0-beta.12"
tracing-bunyan-formatter = "*"
tracing-futures = "*"
tracing-log = "*"

[dependencies.chrono]
default-features = false
features = ["clock", "std"]
version = "0.4.15"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.sqlx]
default-features = false
features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"]
version = "0.5.7"

[dependencies.tracing]
features = ["log"]
version = "0.1"

[dependencies.tracing-subscriber]
features = ["registry", "env-filter"]
version = "0.2.12"

[dependencies.uuid]
features = ["v4"]
version = "0.8.1"

[dev-dependencies]
actix-rt = "2"
reqwest = "0.11"
tokio = "1"
once_cell = "*"

[lib]
path = "src/lib.rs"
